fixed spacing on project detail and share buttons when viewing from a mobile device

--- a/stylesheets/work.scss
+++ b/stylesheets/work.scss
@@ -136,6 +136,8 @@
 		}
 		.project-detail {
 			float: right;
+			margin-top: 40px;
+    	margin-bottom: 20px;
 			> .col-md-4 {
 				float: right;
 			}
@@ -487,7 +489,7 @@ left: 36px;
 		margin-bottom: 10px;
 	}
 }
-// 
+//
 // .allcases {
 // 	opacity: 0;
 // }
